Add header partial with stub actions

--- a/frontend/app/views/layouts/application.html.erb
+++ b/frontend/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
 <body>
 
    <body>
+     <header>
+        <%= render "shared/header" %>
+     </header>
      <div class="container">
        <%= yield %>
      </div>
