changed ArchiveSpace to ArchivesSpace

--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -6,7 +6,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <a class="brand" href="#">ArchiveSpace</a>
+        <a class="brand" href="#">ArchivesSpace</a>
         <div class="nav-collapse">
           <ul class="nav">
             <li class="active"><%= link_to raw('<span class="icon-home icon-white"></span>'), :controller=>:welcome, :action=>:index %></li>
