--- a/frontend/app/views/welcome/index.html.erb
+++ b/frontend/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row-fluid">
    <div class="span12">
-      <h1>Welcome to ArchiveSpace</h1>
+      <h1>Welcome to ArchivesSpace</h1>
       <p>This is where something will go.</p>
    </div>
 </div>
