--- a/frontend/app/assets/stylesheets/header.css.less
+++ b/frontend/app/assets/stylesheets/header.css.less
@@ -1,7 +1,12 @@
 // header customisations
 
+// pull in twitter variables
+@import "twitter/bootstrap/variables";
+@import "twitter/bootstrap/mixins";
+
 // support input appended to navbar search field
-.navbar-search .input-append {
+.navbar-search .input-append, 
+.navbar .input-prepend {
    margin-bottom: 0;
 }
 
@@ -24,4 +29,19 @@
 .login .btn.btn-primary {
    width: 100%;
    margin-left: 0;
+}
+
+// repository selector
+.repository-label {
+ .navbarVerticalAlign(22);
+ padding: 0 10px;
+ display: inline-block;
+ line-height: 25px;
+ vertical-align: middle;
+ float: none !important;
+ margin: 0 !important;
+ .box-shadow(~"inset 0 1px 2px rgba(0,0,0,.1), 0 1px 0 rgba(255,255,255,.15)");
+ border-top: 1px solid @navbarSearchBorder;
+ border-bottom: 1px solid @navbarSearchBorder;
+ .border-radius(0 4px 4px 0);
 }
