refactor header.html template; and allow for repository creation and selection;

--- a/frontend/app/assets/stylesheets/application.css
+++ b/frontend/app/assets/stylesheets/application.css
@@ -13,3 +13,9 @@
  *= require twitter/bootstrap
  *= require twitter/bootstrap-responsive
  */
+
+
+/* Form overrides */
+.modal > form {
+   margin: 0;
+}
