don't render create repo if not logged in

--- a/frontend/app/views/shared/_header_repository.html.erb
+++ b/frontend/app/views/shared/_header_repository.html.erb
@@ -17,7 +17,9 @@
             <% end %>
             <li class="divider"></li>
          <% end %>
-         <li><%= link_to "Create", {:controller=>:repository, :action=>:new}, "data-toggle"=>"modal-ajax" %></li>
+         <% if session[:user] %>
+            <li><%= link_to "Create", {:controller=>:repository, :action=>:new}, "data-toggle"=>"modal-ajax" %></li>
+         <% end %>
        </ul>                 
   </div>
 </li>
