pull in twitter-bootstrap-rails gem to replace less-rails-bootstrap, as it better allows for bootstrap overrides;

--- a/frontend/app/assets/stylesheets/header.css.less
+++ b/frontend/app/assets/stylesheets/header.css.less
@@ -64,9 +64,7 @@
 }
 .user-label,
 .repository-label {
-   .navbarVerticalAlign(22);
-   padding: 0 10px 0 5px;
-   line-height: 25px;
+   padding: 4px 9px;
    display: inline-block;
    vertical-align: middle;
    margin: 0 !important;
@@ -74,5 +72,7 @@
    border-top: 1px solid @navbarSearchBorder;
    border-bottom: 1px solid @navbarSearchBorder;
    .border-radius(4px 0 0 4px);
-   font-size: 12px;
+   #font > .sans-serif(13px, normal, 1);
+   .navbarVerticalAlign(28px); // Vertically center in navbar
+   margin-bottom: 0;
 }
