add basic accession creation - no validation yet

--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -24,7 +24,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Create <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Accession</a></li>
+                <li><%= link_to "Accession", :controller=>:accessions, :action=>:new %></li>
                 <li class="divider"></li>
                 <li><a href="#">Resource</a></li>
                 <li><a href="#">Digital Object</a></li>
