--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -1,76 +1,83 @@
-<%= form_for :accession, :html=>{:class=>'form-horizontal'} do |f| %>
-   <fieldset>
-      <div class="control-group">
-         <%= label_tag :title, "Title", :class=>"control-label" %>
-        <div class="controls">
-           <%= text_field_tag :title %>
-        </div>
-      </div>
-      <div class="control-group">
-         <%= label_tag :publish, "Publish?", :class=>"control-label" %>
-        <div class="controls">
-           <label class="checkbox"><%= check_box_tag :publish %> Check this if you wish to publish this accession to the public.</label>
-        </div>
-      </div>
-      <div class="control-group">
-         <%= label_tag :restrictions, "Restrictions Apply?", :class=>"control-label" %>
-        <div class="controls">
-           <%= check_box_tag :restrictions %>
-        </div>
-      </div>
-      <div class="control-group">
-         <%= label_tag :accession_date, "Accession Date", :class=>"control-label" %>
-        <div class="controls">
-           <%= text_field_tag :accession_date %>
-        </div>
-      </div>
-      <div class="control-group">
-         <%= label_tag :type, "Type of Resource", :class=>"control-label" %>
-        <div class="controls">
-           <%= text_field_tag :type %>
-        </div>
-      </div>
-      <div class="control-group">
-         <%= label_tag :retention_schedule_rule, "Retentions Schedule/Rule", :class=>"control-label" %>
-        <div class="controls">
-           <%= text_field_tag :retention_schedule_rule %>
-        </div>
-      </div>
-      <div class="control-group">
-         <%= label_tag :content_description, "Content Description", :class=>"control-label" %>
-        <div class="controls">
-           <%= text_area_tag :content_description %>
-        </div>
-      </div>
-      <div class="control-group">
-         <%= label_tag :condition_description, "Content Description", :class=>"control-label" %>
-        <div class="controls">
-           <%= text_area_tag :condition_description %>
-        </div>
-      </div>
-      <div class="control-group">
-         <%= label_tag :prevenance, "Prevenance/Custodial History", :class=>"control-label" %>
-        <div class="controls">
-           <%= text_area_tag :prevenance %>
-        </div>
-      </div>
-      <div class="control-group">
-         <%= label_tag :inventory, "Inventory Description", :class=>"control-label" %>
-        <div class="controls">
-           <%= text_area_tag :inventory %>
-        </div>
-      </div>
-      <div class="control-group">
-         <%= label_tag :disposition_note, "Disposition Note", :class=>"control-label" %>
-        <div class="controls">
-           <%= text_area_tag :disposition_note %>
-        </div>
-      </div>
-      <div class="control-group">
-         <%= label_tag :repository_processing_note, "Repository Processing Note", :class=>"control-label" %>
-        <div class="controls">
-           <%= text_area_tag :repository_processing_note %>
-        </div>
-      </div>
-    </fieldset>
-<% end %>
+<fieldset>
+   <div class="control-group">
+      <%= f.label :title, "Title", :class=>"control-label" %>
+     <div class="controls">
+        <%= f.text_field :title %>
+     </div>
+   </div>
+   <div class="control-group">
+      <%= f.label :accession_id_0, "Identifier", :class=>"control-label" %>
+     <div class="controls archivespace-identifier-fields">
+        <%= f.text_field :accession_id_0, :size=>10 %>
+        <%= f.text_field :accession_id_1, :size=>10 %>
+        <%= f.text_field :accession_id_2, :size=>10 %>
+        <%= f.text_field :accession_id_3, :size=>10 %>
+     </div>
+   </div>
+   <!--<div class="control-group">
+      <%= label_tag :publish, "Publish?", :class=>"control-label" %>
+     <div class="controls">
+        <label class="checkbox"><%= check_box_tag :publish %> Check this if you wish to publish this accession to the public.</label>
+     </div>
+   </div>
+   <div class="control-group">
+      <%= label_tag :restrictions, "Restrictions Apply?", :class=>"control-label" %>
+     <div class="controls">
+        <%= check_box_tag :restrictions %>
+     </div>
+   </div>-->
+   <div class="control-group">
+      <%= f.label :accession_date, "Accession Date", :class=>"control-label" %>
+     <div class="controls">
+        <%= f.text_field :accession_date, :placeholder=>"YYYY-MM-DD" %>
+     </div>
+   </div>
+   <!-- <div class="control-group">
+      <%= label_tag :type, "Type of Resource", :class=>"control-label" %>
+     <div class="controls">
+        <%= text_field_tag :type %>
+     </div>
+   </div>
+   <div class="control-group">
+      <%= label_tag :retention_schedule_rule, "Retentions Schedule/Rule", :class=>"control-label" %>
+     <div class="controls">
+        <%= text_field_tag :retention_schedule_rule %>
+     </div>
+   </div> -->
+   <div class="control-group">
+      <%= f.label :content_description, "Content Description", :class=>"control-label" %>
+     <div class="controls">
+        <%= f.text_area :content_description, :rows=>3 %>
+     </div>
+   </div>
+   <div class="control-group">
+      <%= f.label :condition_description, "Condition Description", :class=>"control-label" %>
+     <div class="controls">
+        <%= f.text_area :condition_description, :rows=>3 %>
+     </div>
+   </div>
+   <!-- <div class="control-group">
+      <%= label_tag :prevenance, "Prevenance/Custodial History", :class=>"control-label" %>
+     <div class="controls">
+        <%= text_area_tag :prevenance %>
+     </div>
+   </div>
+   <div class="control-group">
+      <%= label_tag :inventory, "Inventory Description", :class=>"control-label" %>
+     <div class="controls">
+        <%= text_area_tag :inventory %>
+     </div>
+   </div>
+   <div class="control-group">
+      <%= label_tag :disposition_note, "Disposition Note", :class=>"control-label" %>
+     <div class="controls">
+        <%= text_area_tag :disposition_note %>
+     </div>
+   </div>
+   <div class="control-group">
+      <%= label_tag :repository_processing_note, "Repository Processing Note", :class=>"control-label" %>
+     <div class="controls">
+        <%= text_area_tag :repository_processing_note %>
+     </div>
+   </div>-->
+ </fieldset>
