--- a/frontend/app/views/accessions/new.html.erb
+++ b/frontend/app/views/accessions/new.html.erb
@@ -6,7 +6,13 @@
    </div>
    <div class="span6">
       <h2>Create an Accession</h2>
-      <%= render "accessions/form" %>
+      <%= semantic_form_for @accession, :url=>{:action=>:create}, :html=>{:class=>'form-horizontal'} do |f| %>
+         <%= render :partial=>"accessions/form", :locals=>{:f=>f} %>
+         <div class="form-actions">
+            <button class="btn">Cancel</button>
+            <button type="submit" class="btn btn-primary">Create Accession</button>
+         </div>
+      <% end %>
    </div>
    <div class="span3"></div>
 </div>
