add missing ui elements for accession index stub

--- a/frontend/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/frontend/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -16,3 +16,8 @@ h2 > .label {
    line-height: @baseLineHeight * 2;
    vertical-align: middle;
 }
+
+.breadcrumb {
+   margin-top: -@baseLineHeight;
+   .border-radius(0 0 3px 3px);
+}
