--- a/frontend/app/views/accessions/index.html.erb
+++ b/frontend/app/views/accessions/index.html.erb
@@ -1,1 +1,34 @@
-TODO
+<%= render :partial=>"shared/breadcrumb", :locals=>{:current=>"Browse Accessions"} %>
+<div class="row-fluid">
+   <div class="span3">
+      <div class="well">The facets/search filters will go here</div>
+   </div>
+   <div class="span9">
+      <div class="btn-group" style="float: right">
+        <button class="btn">Create Accession</button>
+        <button class="btn">Do Something Else</button>
+        <button class="btn">Another Thing</button>
+      </div>
+      <h2>Accessions</h2>
+      <table class="table table-striped table-bordered table-condensed">
+        <thead>
+          <tr>
+            <th>Title</th>
+            <th>Identifier</th>
+            <th>Linked Resource</th>
+            <th>Modified</th>
+            <th>Created</th>
+          </tr>
+        </thead>
+        <tbody>
+           <tr>
+            <td>1</td>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>          
+        </tbody>
+      </table>
+   </div>
+</div>
