--- a/frontend/app/views/repository/new.html.erb
+++ b/frontend/app/views/repository/new.html.erb
@@ -8,7 +8,7 @@
        <div class="control-group">
           <label class="control-label" for="repo_id">Repository Id</label>
           <div class="controls">
-            <input type="text" id="repo_id" name="id"/>
+            <input type="text" id="id" name="id"/>
           </div>
         </div>
         <div class="control-group">
