--- a/frontend/app/views/accessions/show.html.erb
+++ b/frontend/app/views/accessions/show.html.erb
@@ -1,3 +1,4 @@
+<%= render :partial=>"shared/breadcrumb", :locals=>{:current=>"Browse Accessions"} %>
 <div class="row-fluid">
    <div class="span3">
       <div class="well">
