--- a/frontend/app/views/shared/_breadcrumb.html.erb
+++ b/frontend/app/views/shared/_breadcrumb.html.erb
@@ -1,10 +1,18 @@
 <div class="row-fluid">
    <div class="span12">
       <ul class="breadcrumb">
-        <li>
-           <%= link_to "Home", :controller=>:welcome, :action=>:index %><span class="divider">/</span>
-        </li>
-         <li class="active"><%= current %></li>
+         <li>
+            <%= link_to "Home", :controller=>:welcome, :action=>:index %><span class="divider">/</span>
+         </li>
+         <% trail.each_with_index do |crumb, i| %>
+            <% if i < trail.length - 1%>         
+               <li>
+                  <%= crumb %><span class="divider">/</span>
+               </li>
+            <% else %>
+               <li class="active"><%= crumb %></li>
+            <% end %>
+         <% end %>
       </ul>
    </div>
 </div>
