complete browse->create->show accession workflow, with breadcrumbs and new accession id format

--- a/frontend/app/views/accessions/show.html.erb
+++ b/frontend/app/views/accessions/show.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial=>"shared/breadcrumb", :locals=>{:current=>"Browse Accessions"} %>
+<%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>[link_to("Browse Accessions", :controller=>:accessions, :action=>:index), @accession.title]} %>
 <div class="row-fluid">
    <div class="span3">
       <div class="well">
