--- a/frontend/app/views/accessions/index.html.erb
+++ b/frontend/app/views/accessions/index.html.erb
@@ -5,7 +5,7 @@
    </div>
    <div class="span9">
       <div class="btn-group" style="float: right">
-        <button class="btn">Create Accession</button>
+        <%= link_to "Create Accession", {:controller=>:accessions, :action=>:new}, :class=>"btn" %>
         <button class="btn">Do Something Else</button>
         <button class="btn">Another Thing</button>
       </div>
@@ -18,6 +18,7 @@
                <th>Identifier</th>
                <th>Accession Date</th>
                <th>Linked Resource</th>
+               <th width="70px"><!-- actions --></th>
              </tr>
            </thead>
            <tbody>
@@ -27,6 +28,12 @@
                <td><%= accession.accession_id %></td>
                <td><%= Date.strptime(accession.accession_date, "%Y-%m-%d") %></td>
                <td>TODO</td>
+               <td>
+                  <div class="btn-group" style="float: right">
+                    <%= link_to "View", {:controller=>:accessions, :action=>:show, :id=>accession.accession_id_for_url}, :class=>"btn btn-mini" %>
+                    <button class="btn btn-mini">Edit</button>
+                  </div>
+               </td>
              </tr>
              <% end %>
            </tbody>
