--- a/frontend/app/views/accessions/new.html.erb
+++ b/frontend/app/views/accessions/new.html.erb
@@ -5,15 +5,14 @@
          <p>This is where the tree will go. Perhaps not for a new Accession.  But when editing it will be here.</p>
       </div>
    </div>
-   <div class="span6">
+   <div class="span9">
       <h2>Create an Accession</h2>
       <%= semantic_form_for @accession, :url=>{:action=>:create}, :html=>{:class=>'form-horizontal'} do |f| %>
          <%= render :partial=>"accessions/form", :locals=>{:f=>f} %>
          <div class="form-actions">            
             <button type="submit" class="btn btn-primary">Create Accession</button>
-            <button class="btn">Cancel</button>
+            <%= link_to "Cancel", :back, :class=>"btn" %>
          </div>
       <% end %>
    </div>
-   <div class="span3"></div>
 </div>
