--- a/frontend/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/frontend/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -21,3 +21,9 @@ h2 > .label {
    margin-top: -@baseLineHeight;
    .border-radius(0 0 3px 3px);
 }
+
+.navbar .brand {
+   text-shadow: 0 1px 0 rgba(255, 255, 255, .1), 0 0 30px rgba(255, 255, 255, .125);
+   color: black;
+   font-weight: bold;
+}
