add responsive menu back to navbar

--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -1,6 +1,11 @@
 <div class="navbar">
     <div class="navbar-inner">
       <div class="container">
+        <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
         <%= link_to "ArchivesSpace", {:controller=>:welcome, :action=>:index}, :class=>"brand" %>
         <div class="nav-collapse">
           <ul class="nav">
