fix resource ajax form freaking out with a form within form

--- a/frontend/app/views/repository/new.html.erb
+++ b/frontend/app/views/repository/new.html.erb
@@ -40,7 +40,7 @@
         if (response === "Success") {
           document.location.reload(true);
         } else {
-          $('form#new_repository').html(response);
+          $('form#new_repository').replaceWith(response);
         }        
      }, 
      error: function(obj, errorText, errorDesc) {
