--- a/frontend/app/views/layouts/application.html.erb
+++ b/frontend/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>ArchivesSpace</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= include_controller_css %>
   <%= javascript_include_tag "application" %>
   <%= include_controller_js %>
   <%= csrf_meta_tags %>
