--- a/frontend/app/views/resources/new.html.erb
+++ b/frontend/app/views/resources/new.html.erb
@@ -1,13 +1,27 @@
 <%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>[link_to("Browse Resources", :controller=>:resources, :action=>:index),"Create a Resource"]} %>
 <div class="row-fluid">
    <div class="span3">
-      <div class="archives-tree well">
-         <ul>
-     				<li id="1234">
-     					<a href="#">Container</a>
-     				</li>
-     			</ul>
+     <div class="well">
+      <div class="archives-tree">
+      <ul>
+      		<li id="root">
+      			<a href="#">Container</a>
+      		</li>
+      	</ul>
       </div>
+      <div class="btn-group archives-tree-toolbar">
+        <div class="btn-group dropup">
+          <a class="btn btn-mini dropdown-toggle" data-toggle="dropdown" href="#">
+              Add
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="add-container-action" href="javascript:void(0);">Add a Container</a></li>
+              <li><a class="add-resource-action" href="javascript:void(0);">Add a Resource</a></li>
+            </ul>
+        </div>
+      </div>
+    </div>
    </div>
    <div class="span9">
       <h2>Create a Resource</h2>
