Restructured the frontend and backend to share their models
Quite a few bits to this:

  * Accessions are now /accession/[id] instead of
    /repo/[repo_id]/accession/[id]

  * Reworked the JSONModel to fix a bug arising from my
    misunderstanding of how anonymous classes and class variables
    interact.

  * Added some Rails-model-like methods to make
    getting/creating/updating resources easier.

  * Unified our validation handling, so a JSON validation and a DB
    validation exception look the same from the caller's point of
    view, and provide information about what was wrong with which
    fields.

  * Changes to the frontend forms to reflect the new use of models

--- a/frontend/app/views/accessions/_form.html.erb
+++ b/frontend/app/views/accessions/_form.html.erb
@@ -1,12 +1,5 @@
+<%= render "shared/errors"%>
 <fieldset>
-   <% if @errors %>
-      <div class="alert alert-error">
-         <% @errors.each do |error| %>
-            <div class="error"><%= error[:message] %></div>
-         <% end %>
-      </div>
-   <% end %>
-
    <div class="control-group">
       <%= f.label :title, "Title", :class=>"control-label" %>
      <div class="controls">
