--- a/frontend/app/views/accessions/edit.html.erb
+++ b/frontend/app/views/accessions/edit.html.erb
@@ -7,7 +7,8 @@
    </div>
    <div class="span9">
       <h2>Edit Accession "<%= @accession.title%>"</h2>
-      <%= semantic_form_for @accession, :url=>{:action=>:update, :id=>@accession.id}, :html=>{:class=>'form-horizontal'} do |f| %>
+      <%= semantic_form_for @accession, :as => "accession", :url=>{:action=>:update, :id=>@accession.id}, :html=>{:class=>'form-horizontal'} do |f| %>
+         <input type="hidden" name="_method" value="put" />
          <%= render :partial=>"accessions/form", :locals=>{:f=>f} %>
          <div class="form-actions">            
             <button type="submit" class="btn btn-primary">Save Accession</button>
