--- a/frontend/app/views/accessions/show.html.erb
+++ b/frontend/app/views/accessions/show.html.erb
@@ -7,14 +7,14 @@
    </div>
    <div class="span9">
       <div class="btn-group" style="float: right">
-        <%= link_to "Edit Accession", {:controller=>:accessions, :action=>:edit, :id=>@accession.accession_id}, :class=>"btn" %>
+        <%= link_to "Edit Accession", {:controller=>:accessions, :action=>:edit, :id=>@accession.id}, :class=>"btn" %>
         <button class="btn">Delete</button>
       </div>
       <h2><%= @accession.title %> <span class="label label-info">Accession</span></h2>
       
       <div class="row-fluid label-and-value">
          <div class="span3">Identifier</div>
-         <div class="span9"><%= format_id(@accession.accession_id) %></div>
+         <div class="span9"><%= @accession.id %></div>
       </div>
       <div class="row-fluid label-and-value">
          <div class="span3">Accession Date</div>
