--- a/frontend/app/views/repository/new.html.erb
+++ b/frontend/app/views/repository/new.html.erb
@@ -1,20 +1,10 @@
-<%= semantic_form_for @repository, :url=>{:action=>:create}, :html=>{:class=>'form-horizontal'} do |f| %>
+<%= semantic_form_for @repository, :as=>"repository", :url=>{:action=>:create}, :html=>{:class=>'form-horizontal'} do |f| %>
    <div class="modal-header">
     <button type="button" class="close" data-dismiss="modal">×</button>
     <h3>Create Repository</h3>
    </div>
    <div class="modal-body">
-     <% if @errors %>
-        <div class="alert alert-error">
-           <% @errors.each do |error| %>
-              <% if error.kind_of?(Hash) %>
-                <div class="error"><%= error[:message] %></div>
-              <% else %>
-                <div class="error"><%= error[1].first %></div>
-              <% end %>
-           <% end %>
-        </div>
-     <% end %>
+      <%= render "shared/errors"%>
       <fieldset>
        <div class="control-group">
           <label class="control-label" for="repo_id">Repository Id</label>
