--- a/frontend/app/views/shared/_header_repository.html.erb
+++ b/frontend/app/views/shared/_header_repository.html.erb
@@ -1,18 +1,18 @@
 <li class="dropdown repository-container">  
   <div class="input-append">
-     <span class="repository-label"><span class=" icon-hdd icon-white"></span> <span class="current-repository-id"><% if session[:repo] %><%= session[:repo].repo_id %><% end %></span></span><a class="btn btn-inverse dropdown-toggle last" data-toggle="dropdown" href="#"><span class="caret"></span></a>
+     <span class="repository-label"><span class=" icon-hdd icon-white"></span> <span class="current-repository-id"><% if session[:repo] %><%= session[:repo_id] %><% end %></span></span><a class="btn btn-inverse dropdown-toggle last" data-toggle="dropdown" href="#"><span class="caret"></span></a>
        <ul class="dropdown-menu">
-         <% repos = Repository.all %>
+         <% repos = JSONModel(:repository).all %>
          <% if session[:repo] %>
             <%#><li><a href="#">Edit</a></li>
             <li class="divider"></li>%>
          <% end %>
          <% if repos.length >= 1 %>
             <% for repo in repos %>
-               <% if session[:repo] === repo["id"] %>
-                  <li><span class="icon-ok-circle"></span> <%= repo["repo_id"] %></li>
+               <% if session[:repo] === repo.id %>
+                  <li><span class="icon-ok-circle"></span> <%= repo.repo_id %></li>
                <% else %>
-                  <li><%= link_to repo["repo_id"], {:controller=>:repository, :action=>:select, :id=>repo["id"]}, :class=>"select-repo" %></li>
+                  <li><%= link_to repo.repo_id, {:controller=>:repository, :action=>:select, :id=>repo.id}, :class=>"select-repo" %></li>
                <% end %>
             <% end %>
             <li class="divider"></li>
