--- a/frontend/app/assets/stylesheets/tree.css.less
+++ b/frontend/app/assets/stylesheets/tree.css.less
@@ -9,6 +9,10 @@
   margin-top: 10px;
 }
 
+.archives-tree.jstree-default.jstree-focused {
+  background-color: transparent;
+}
+
 .archives-tree .resource .jstree-themeicon {
   background-image: none;
 }
@@ -32,7 +36,7 @@
   
   .jstree-open > a > .jstree-icon {
     background-position: -408px -120px !important;
-  }
+  } 
   
   .resource > a > .jstree-icon {
     background-position: -24px  -24px !important;
