Fetch the list of repositories in the application controller and select one by default

--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -55,7 +55,7 @@
             </div>
           </form>         
           <ul class="nav pull-right">
-           <%= render "shared/header_repository" %>
+           <%= render "shared/header_repository", :repositories => @repositories %>
            <%= render "shared/header_user" %>
          </ul>
         </div><!-- /.nav-collapse -->
