add skin mechanism

--- a/frontend/app/assets/stylesheets/header.css.less
+++ b/frontend/app/assets/stylesheets/header.css.less
@@ -1,8 +1,6 @@
 // header customisations
 
-// pull in twitter variables
-@import "twitter/bootstrap/variables";
-@import "twitter/bootstrap/mixins";
+@import "variables";
 
 // support input appended to navbar search field
 .navbar .input-append, 
