--- a/frontend/app/assets/stylesheets/tree.css.less
+++ b/frontend/app/assets/stylesheets/tree.css.less
@@ -1,9 +1,4 @@
-@import "twitter/bootstrap/variables";
-@import "twitter/bootstrap/mixins";
-
-// Set the correct sprite paths
-@iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.png');
-@iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.png');
+@import "variables";
 
 .archives-tree-toolbar {
   margin-top: 10px;
