--- a/frontend/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/frontend/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,9 +1,7 @@
 @import "twitter/bootstrap/bootstrap";
 @import "twitter/bootstrap/responsive";
 
-// Set the correct sprite paths
-@iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.png');
-@iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.png');
+@import "variables";
 
 .form-horizontal {
   // Increase spacing between groups
