clean up header.css after skin merge

--- a/frontend/app/assets/stylesheets/header.css.less
+++ b/frontend/app/assets/stylesheets/header.css.less
@@ -73,4 +73,6 @@
    #font > .sans-serif(13px, normal, 1);
    .navbarVerticalAlign(28px); // Vertically center in navbar
    margin-bottom: 0;
+   line-height: @baseLineHeight;
+   background-color: @navbarBackground;
 }
