--- a/frontend/app/assets/javascripts/resources.js.erb
+++ b/frontend/app/assets/javascripts/resources.js.erb
@@ -8,7 +8,7 @@ $(function() {
        
        "themes": {
           "theme": "default",
-          "url": "<%= asset_path('jstree-theme/style.css') %>"
+          "url": "<%= asset_path('jstree/style.css') %>"
        },
        "dnd": {
           "drop_target" : false,
