--- a/frontend/app/assets/stylesheets/themes/slate/application.less
+++ b/frontend/app/assets/stylesheets/themes/slate/application.less
@@ -1,7 +1,16 @@
+// twitter bootstrap
+@import "twitter/bootstrap/bootstrap";
+@import "twitter/bootstrap/responsive";
+
 @import "twitter/bootstrap/variables";
 @import "twitter/bootstrap/mixins";
 
 @iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.png');
 @iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.png');
 
-@import "skins/default";
+// red skin
+@import "themes/slate/variables";
+@import "themes/slate/bootswatch";
+
+// archives space styles
+@import "archivesspace";
