--- a/frontend/app/views/layouts/application.html.erb
+++ b/frontend/app/views/layouts/application.html.erb
@@ -3,8 +3,7 @@
 <head>
   <title>ArchivesSpace</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= include_controller_css %>
+  <%= stylesheet_link_tag    "themes/#{session[:theme]}/application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= include_controller_js %>
   <%= csrf_meta_tags %>
