--- a/frontend/app/assets/stylesheets/themes/default/application.less
+++ b/frontend/app/assets/stylesheets/themes/default/application.less
@@ -1,12 +1,5 @@
 // twitter bootstrap
-@import "twitter/bootstrap/bootstrap";
-@import "twitter/bootstrap/responsive";
-
-@import "twitter/bootstrap/variables";
-@import "twitter/bootstrap/mixins";
-
-@iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.png');
-@iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.png');
+@import "bootstrap";
 
 // default skin
 @import "themes/default/default";
