--- a/frontend/app/views/archival_objects/new.html.erb
+++ b/frontend/app/views/archival_objects/new.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>[link_to("Browse Resources", :controller=>:resources, :action=>:index),"Create a Resource"]} %>
+<%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>[link_to("Browse Resources", :controller=>:archival_objects, :action=>:index),"Create a Resource"]} %>
 <div class="row-fluid">
    <div class="span3">
      <div class="well">
