--- a/frontend/app/views/archival_objects/show.html.erb
+++ b/frontend/app/views/archival_objects/show.html.erb
@@ -1,4 +1,4 @@
-<%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>[link_to("Browse Resources", :controller=>:resources, :action=>:index), "Test Resource"]} %>
+<%= render :partial=>"shared/breadcrumb", :locals=>{:trail=>[link_to("Browse Resources", :controller=>:archival_objects, :action=>:index), "Test Resource"]} %>
 <div class="row-fluid">
    <div class="span3">
       <div class="well">
