--- a/frontend/app/views/shared/_header.html.erb
+++ b/frontend/app/views/shared/_header.html.erb
@@ -16,7 +16,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Browse <b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><%= link_to "Accessions", :controller=>:accessions, :action=>:index %></li>
-                <li><%= link_to "Resources", :controller=>:resources, :action=>:index %></li>
+                <li><%= link_to "Resources", :controller=>:archival_objects, :action=>:index %></li>
                 <li><a href="#">Digital Objects</a></li>
                 <li><a href="#">Names</a></li>
                 <li><a href="#">Subjects</a></li>                
@@ -28,7 +28,7 @@
               <ul class="dropdown-menu">
                 <li><%= link_to "Accession", :controller=>:accessions, :action=>:new %></li>
                 <li class="divider"></li>
-                <li><%= link_to "Resource", :controller=>:resources, :action=>:new %></li>
+                <li><%= link_to "Resource", :controller=>:archival_objects, :action=>:new %></li>
                 <li><a href="#">Digital Object</a></li>
                 <li><a href="#">Name</a></li>
                 <li><a href="#">Subject</a></li>
